<resources>
    <string name="app_name">photoblog</string>
    <string name="email_hint">Your Email</string>
    <string name="Pass_hint">Password</string>
    <string name="lgin_logo_des">logo log in page</string>
    <string name="email">email fild</string>
    <string name="login_button_text">Login to account</string>
    <string name="login_reg_button_text">Need a new account??</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="reg_pass_text">password</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_text">Already have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
