<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/loginPageLoge"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/lgin_logo_des"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:hint="@string/Pass_hint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="16dp"
        android:textSize="18dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textSize="18dp"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:padding="16dp"
        android:text="@string/login_reg_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        />




</LinearLayout>